# mptrsz

./: Cargo.toml  Changelog.md  ReadMe.md  mise.toml  mptrsz.json
.github/workflows/: build-rust.yml  check-rust.yml  release-rust.yml
example_ahk/: mouse_sz_example.ahk
example_ahk/lib/: mouse_sz.ahk
src/: GetDIBits.rs  _msz2DO.md  dummy.bin.rs  dummy.lib.rs  mouse_sz.lib.rs  mptrsz.bin.rs  mptrsz.lib.rs
src/binmod/: [binmod].rs  cli_opt.rs
src/libmod/: [libmod].rs  capture.rs  capture_test.rs  common.rs  error.rs  error_test.rs  ffi_api.rs  get_cursor_sz.rs  measure.rs
xtask/: Cargo.toml
xtask/src/: main.rs
