[package]  # help on keys doc.rust-lang.org/cargo/reference/manifest.html
name   	= "mptrsz"
version	= "0.1.0"
authors	= ["{{authors}}"]
edition	= "2024"
build  	= "build.rs"

[workspace]
members = ["./","xtask"]	# relative to the workspace root

[[bin]]
name	= "mptrsz"
path	= "src/mptrsz.bin.rs"

[lib]
name      	= "mptrsz"
path      	= "src/mptrsz.lib.rs"
crate-type	= ['lib','cdylib']

[dependencies]
helperes     	= {git="https://github.com/eugenesvk/helperes.git"     } #, tag="0.1.2"
helperes_proc	= {git="https://github.com/eugenesvk/helperes-proc.git"} #, tag="0.1.0"
log          	= "0.4"
# stderrlog  	= "0.6"
anyhow       	= "1.0"
thiserror    	= "2.0.17"
faccess      	= "0.2"
docpos       	= "0.2.0" #add doc comments after items, not before them
bitvec       	= "1.0.1"
windows = {version="0.59.0", features=[
  "Win32_Graphics_Dxgi",
  "Win32_Foundation",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_System_Memory",
  "Win32_Security",
  "Win32_UI_WindowsAndMessaging",
]}
rusty-duplication = "0.6.1"
windows-registry = "0.6.1"
widestring = "1.2.1"

[build-dependencies]
log	= "0.4"

[profile.release]
# opt        	for      	size
strip        	= true   	# Auto strip symbols from the binary (included by default on Linux/macOS)
opt-level    	= 3      	# |3|     s=size, z=size+
lto          	= true   	# |false| Sets link-time optimization.
codegen-units	= 1      	# |16|    reduce parallel code generation
panic        	= "abort"	# |unwind| save ~20k w/o drop-on-panic cleanup and std::panic::catch_unwind

# Overrides doc.rust-lang.org/nightly/cargo/reference/profiles.html#overrides
[profile.dev.package."*"] # panic/lto/rpath can't be overridden
opt-level	= 3 	# build dependencies in release mode to make the main app faster
[profile.dev.build-override]
opt-level	= 3	# build scripts and proc-macros in release mode to make them faster

[lints.rust]
non_snake_case        	= "allow"
non_upper_case_globals	= "allow"
non_camel_case_types  	= "allow"
